force-app/main/default/objects/Service_Request__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Service Request&apos;s</relationshipLabel>
    <relationshipName>Service_Request_s</relationshipName>
    <type>Lookup</type>
</CustomField>