force-app/main/default/objects/Service_Request__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Service Request&apos;s</relationshipLabel>
    <relationshipName>Service_Request_s</relationshipName>
    <type>Lookup</type>
</CustomField>