force-app/main/default/objects/Service_Request__c/recordTypes/Card_Service.recordType-meta.xml
<RecordType>
    <fullName>Card_Service</fullName>
    <active>false</active>
    <label>Card Service</label>
</RecordType>