force-app/main/default/objects/Service_Request__c/recordTypes/General_Complaint_Request.recordType-meta.xml
<RecordType>
    <fullName>General_Complaint_Request</fullName>
    <active>false</active>
    <label>General Complaint/Request</label>
</RecordType>