force-app/main/default/objects/Service_Request__c/recordTypes/Loan_Service.recordType-meta.xml
<RecordType>
    <fullName>Loan_Service</fullName>
    <active>false</active>
    <label>Loan Service</label>
</RecordType>